code refactor and update docs
