# handlers/users.js
@@ -1,8 +1,7 @@
 const fetch = require("node-fetch");
-const { generateToken } = require("../utils/utils")
+const { generateToken, getHeaders } = require("../utils/utils")
 
-// LoginID Management API key - created on LoginID admin dashbaord 
-const clientID = process.env.MANAGEMENT_API_KEY || "";
+
 // LoginID Management API Service URL
 const managementApiServiceUrl = process.env.MANAGEMENT_API_SERVICE_URL || "";
 
@@ -16,13 +15,9 @@ const UserHandlers = {
 
         // make a request to LoginID Management API
         try {
-            let response = await fetch(managementApiServiceUrl + `/manage/${clientID}/users/${userID}`, {
+            let response = await fetch(`${managementApiServiceUrl}/manage/users/${userID}`, {
                 method: "put",
-                headers: {
-                "Content-Type": "application/json",
-                "Accept": "application/json",
-                "authorization": `Bearer ${token}`,
-                },
+                headers: getHeaders(token),
                 body: JSON.stringify(req.body)
             });
 
@@ -32,7 +27,6 @@ const UserHandlers = {
             } else {
                 return res.status(response.status).json({ code: jsonResponse.code, message: jsonResponse.message });
             }
-
         } catch(err) {
             console.log(err);
             return res.status(500).json(err);
@@ -47,13 +41,9 @@ const UserHandlers = {
         
         // make a request to LoginID Management API
         try {
-            let response = await fetch(managementApiServiceUrl + `/manage/${clientID}/users/${userID}/activate`, {
+            let response = await fetch(`${managementApiServiceUrl}/manage/users/${userID}/activate`, {
                 method: "put",
-                headers: {
-                "Content-Type": "application/json",
-                "Accept": "application/json",
-                "authorization": `Bearer ${token}`,
-                }
+                headers: getHeaders(token),
             });
         
             // user record is successfully activated
@@ -67,8 +57,7 @@ const UserHandlers = {
                 return res.status(200).json(jsonResponse);
             } else {
                 return res.status(response.status).json({ code: jsonResponse.code, message: jsonResponse.message });
-            }
-        
+            }        
         } catch(err) {
             console.log(err);
             return res.status(500).json(err);
@@ -83,85 +72,9 @@ const UserHandlers = {
 
         // make a request to LoginID Management API
         try {
-            let response = await fetch(managementApiServiceUrl + `/manage/${clientID}/users/${userID}/deactivate`, {
-            method: "put",
-            headers: {
-                "Content-Type": "application/json",
-                "Accept": "application/json",
-                "authorization": `Bearer ${token}`,
-            }
-        });
-
-        // user record is successfully deactivated
-        if (response.status === 204) {	
-            return res.sendStatus(204)
-        }
-
-        // check whether something went wrong 
-        let jsonResponse = await response.json();
-        if (response.ok) {
-            return res.status(200).json(jsonResponse);
-        } else {
-            return res.status(response.status).json({ code: jsonResponse.code, message: jsonResponse.message });
-        }
-
-        } catch(err) {
-            console.log(err);
-            return res.status(500).json(err);
-        }
-    },
-
-    async deleteUser(req, res, next) {
-        const userID = req.params.user_id;
-  
-        // create a signed JWT 
-        token = generateToken("users.delete");
-        
-        // make a request to LoginID Management API
-        try {
-            let response = await fetch(managementApiServiceUrl + `/manage/${clientID}/users/${userID}`, {
-                method: "delete",
-                headers: {
-                "Content-Type": "application/json",
-                "Accept": "application/json",
-                "authorization": `Bearer ${token}`,
-                }
-            });
-
-            // user record is successfully deleted
-            if (response.status === 204) {	
-                return res.sendStatus(204)
-            }
-
-            // check whether something went wrong 
-            let jsonResponse = await response.json();
-            if (response.ok) {
-                return res.status(200).json(jsonResponse);
-            } else {
-                return res.status(response.status).json({ code: jsonResponse.code, message: jsonResponse.message });
-            }
-
-        } catch(err) {
-            console.log(err);
-            return res.status(500).json(err);
-        }
-    },
-
-    async dispatchEmailVerification(req, res, next) {
-        const userID = req.params.user_id;
-
-        // create a signed JWT 
-        token = generateToken("users.email-verification.dispatch");
-        
-        // make a request to LoginID Management API
-        try {
-            let response = await fetch(managementApiServiceUrl + `/manage/${clientID}/users/${userID}/email-verification/dispatch`, {
-                method: "post",
-                headers: {
-                "Content-Type": "application/json",
-                "Accept": "application/json",
-                "authorization": `Bearer ${token}`,
-                }
+                let response = await fetch(`${managementApiServiceUrl}/manage/users/${userID}/deactivate`, {
+                method: "put",
+                headers: getHeaders(token),
             });
 
             // user record is successfully deactivated
@@ -176,7 +89,68 @@ const UserHandlers = {
             } else {
                 return res.status(response.status).json({ code: jsonResponse.code, message: jsonResponse.message });
             }
+        } catch(err) {
+            console.log(err);
+            return res.status(500).json(err);
+        }
+    },
 
+    async deleteUser(req, res, next) {
+        const userID = req.params.user_id;
+  
+        // create a signed JWT 
+        token = generateToken("users.delete");
+        
+        // make a request to LoginID Management API
+        try {
+            let response = await fetch(managementApiServiceUrl + `/manage/users/${userID}`, {
+                method: "delete",
+                headers: getHeaders(token),
+            });
+
+            // user record is successfully deleted
+            if (response.status === 204) {	
+                return res.sendStatus(204)
+            }
+
+            // check whether something went wrong 
+            let jsonResponse = await response.json();
+            if (response.ok) {
+                return res.status(200).json(jsonResponse);
+            } else {
+                return res.status(response.status).json({ code: jsonResponse.code, message: jsonResponse.message });
+            }
+        } catch(err) {
+            console.log(err);
+            return res.status(500).json(err);
+        }
+    },
+
+    async dispatchEmailVerification(req, res, next) {
+        const userID = req.params.user_id;
+
+        // create a signed JWT 
+        token = generateToken("users.email-verification.dispatch");
+        
+        // make a request to LoginID Management API
+        try {
+            let response = await fetch(`${managementApiServiceUrl}/manage/users/${userID}/email-verification/dispatch`, {
+                method: "post",
+                headers: getHeaders(token),
+            });
+
+            // user record is successfully deactivated
+            if (response.status === 204) {	
+                return res.sendStatus(204)
+            }
+
+            // check whether something went wrong 
+            let jsonResponse = await response.json();
+            if (response.ok) {
+                return res.status(200).json(jsonResponse);
+            } else {
+                return res.status(response.status).json({ code: jsonResponse.code, message: jsonResponse.message });
+            }
         } catch(err) {
             console.log(err);
             return res.status(500).json(err);
